[metadata]
name = etoolkit
version = attr: etoolkit.__version__
author = attr: etoolkit.__author__
author_email = sgs@pichove.org
description = A simple toolkit for setting environment variables in a flexible way
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/blackm0re/etoolkit

classifiers =
    Development Status :: 5 - Production/Stable
    Environment :: Console
    Intended Audience :: Developers
    Intended Audience :: System Administrators
    License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Operating System :: POSIX
    Topic :: Security :: Cryptography

project_urls =
    Bug Tracker = https://github.com/blackm0re/etoolkit/issues
    Source = https://github.com/blackm0re/etoolkit

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.7

install_requires =
    cryptography>=3.2

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    etoolkit = etoolkit.__main__:main
